Styling and Structure

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
-<% @posts.each do |post| %>
-	<div id="post_wrapper">
+<% @posts.each do |post| %> 
+	<div id="page_wrapper">
 		<h2 class="title">
 			<%= link_to post.title, post %>
 		</h2>
