--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,19 +3,6 @@
 		Nuevo Post
 	</h1>
 
-	<%= form_for :post, url: posts_path do |f| %>
-		<p>
-			<%= f.label 		:title %> <br>
-			<%= f.text_field 	:title %> <br>	
-		</p>
+	<%= render 'form' %>
 
-		<p>
-			<%= f.label 	:body %> <br>
-			<%= f.text_area	:body %> <br>
-		</p>
-		<p>
-			<%= f.submit %>
-		</p>
-		
-	<% end %>
 </div>
