--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,10 +4,10 @@
 	</h1>
 
 	<p class="date">
-		Posteado <%= time_ago_in_words(@post.created_at) %> 
+		Posteado <%= time_ago_in_words(@post.created_at) %> | <%= link_to "Editar", edit_post_path(@post) %> | <%= link_to "Borrar", destroy_post_path
 	</p>
 
 	<p class="body">
 		<%= @post.body %>
 	</p>
-</div>
+</div> 
