--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,7 @@
 	</h1>
 
 	<p class="date">
-		Posteado <%= time_ago_in_words(@post.created_at) %> | <%= link_to "Editar", edit_post_path(@post) %> | <%= link_to "Borrar", destroy_post_path
+		Posteado <%= time_ago_in_words(@post.created_at) %> | <%= link_to "Editar", edit_post_path(@post) %> | <%= link_to "Borrar", post_path(@post), method: :delete, data: {confirm: "¿Está de acuerdo en borrar este post?"} %>
 	</p>
 
 	<p class="body">
