--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,37 +28,35 @@
 			<li>Github</li>
 			<li>Email</li>			
 		</ul>
-
-		<p class="sign_in">
-			Admin Login
-		</p>
+		<% if !user_signed_in? %>
+			<p class="sign_in">
+				Admin Login
+			</p>
+		<% end %>
 	</div>
 
 	<div id="main_content">
 		<div id="header">
-			<p>
-				<% if current_page?(root_path) %>
-					<%= link_to "All Posts", root_path %>
-				<% elsif current_page?(about_path) %>
-					About
-				<% else %>
-					<%= link_to "Ver todos los posts", root_path %>
-				<% end %>
-			</p>
-			<div class="buttons">
-				<button class="button">
-					<%= link_to "New Post", new_post_path %>
-				</button>
-				<button class="button">
-					Log Out
-				</button>
-			</div>			
+			<% if current_page?(root_path) %>
+				<p>All Posts</p>
+			<% elsif current_page?(about_path) %>
+				<p>About</p>
+			<% else %>
+				<%= link_to "Back to All Posts", root_path %>
+			<% end %>
+
+			<% if user_signed_in? %>
+				<div class="buttons">
+					<button class="button"><%= link_to "New Post", new_post_path %></button>
+					<button class="button">Log Out</button>
+				</div>
+			<% end %>
 		</div>
 
 		<% flash.each do |name, msg| %>
-			<%= content_tag(:div, class: "alert") %>
+			<%= content_tag(:div, msg, class: "alert") %>
 		<% end %>
-		
+
 		<%= yield %>
 	</div>
 
