--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,11 @@
 	</h1>
 
 	<p class="date">
-		Posteado <%= time_ago_in_words(@post.created_at) %> | <%= link_to "Editar", edit_post_path(@post) %> | <%= link_to "Borrar", post_path(@post), method: :delete, data: {confirm: "¿Está de acuerdo en borrar este post?"} %>
+		Posteado <%= time_ago_in_words(@post.created_at) %> 
+		<% if user_signed_in? %>
+		| <%= link_to "Editar", edit_post_path(@post) %> | <%= link_to "Borrar", post_path(@post), method: :delete, data: {confirm: "¿Está de acuerdo en borrar este post?"} %>
+		<% end %>
+
 	</p>
 
 	<p class="body">
